# Raytracing-Project

./: .gitignore  CMakeLists.txt  README.md  input.rti  landscape.rti  main.cpp  micky.rti
design/: diagram.wsd
include/: baseobject.hpp  complexobject.hpp  fulltransobject.hpp  interpreter.hpp  lightsource.hpp  material.hpp  object.hpp  ray.hpp  transformedobject.hpp  utility.hpp
lib/OpenCL/include/CL/: cl.hpp
src/: global_defs.cpp  interpreter.cpp  kernel.cpp  transformedobject.cpp  utility.cpp
timeline/: README.md
